# planefight

./: .gitignore  CMakeLists.txt  PlaneFight_Qt.sln  README.md  planefight_qt5.qrc  xmake.lua  飞机大战.sln
asset/: planefight_qt5.qrc
planeFight/: Bullet.cpp  Bullet.h  Config.cpp  Config.h  Director.cpp  Director.h  Enemy.cpp  Enemy.h  EnemyBullet.cpp  EnemyBullet.h  FpsChooseScene.cpp  FpsChooseScene.h  GameScene.cpp  GameScene.h  HighestScoreScene.cpp  HighestScoreScene.h  Image.cpp  Image.h  Plane.cpp  Plane.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  Props.cpp  Props.h  Scene.cpp  Scene.h  SettingScene.cpp  SettingScene.h  Sprite.cpp  Sprite.h  StartScene.cpp  StartScene.h  Window.cpp  Window.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  (+25 more)
planeFight/GeneratedFiles/: qrc_planefight.cpp  ui_planefight.h
planeFight_py/: planeFight_py.pyproj
planefight_qt5/: CMakeLists.txt  README.md  planefight_qt5.qrc
planefight_qt5/res/: planefight_qt5.qrc
planefight_qt5/src/: Config.h  Director.h  Enemy.cpp  FpsChooseScene.cpp  FpsChooseScene.h  GameScene.cpp  GameScene.h  HighestScoreScene.cpp  Image.cpp  Plane.h  Props.cpp  Scene.cpp  SettingScene.cpp  Sprite.cpp  StartScene.cpp  Window.h  main.cpp
src/: Bullet.cpp  Bullet.h  Config.cpp  Director.cpp  Enemy.h  GameScene.cpp  HighestScoreScene.h  Image.h  Plane.cpp  Player.cpp  Player.h  Props.h  Scene.h  SettingScene.h  Sprite.h  StartScene.h  Window.cpp
